@@ -39,7 +39,7 @@ JaWEController.Settings=org.enhydra.jawe.shark.SharkJaWEControllerSettings
 XPDLElementEditor.Settings=org.enhydra.jawe.shark.SharkXPDLEditorSettings
 LabelGenerator.Settings=org.enhydra.jawe.shark.SharkLabelGeneratorSettings
 
-XPDLUtils.Class = org.enhydra.jawe.shark.SharkXPDLUtils
+XPDLUtils.Class = org.enhydra.jawe.shark.business.SharkXPDLUtils
 
 TooltipGenerator.Class = org.enhydra.jawe.shark.SharkTooltipGenerator
 
